# lazuli

./: Cargo.toml  README.md  format.md  impl ideas.md
examples/: hello_world.rs
lazuli_core/: Cargo.toml
lazuli_core/src/: header.rs  lib.rs  sendable.rs  stream.rs
lazuli_core/src/client/: client.rs  connector.rs  listener.rs  mod.rs  server.rs
lazuli_core/src/net/: client.rs  config.rs  connector.rs  server.rs
lazuli_derive/: Cargo.toml
lazuli_derive/src/: lib.rs
rsocks/: Cargo.toml
rsocks/src/: client.rs  header.rs  lib.rs  sendable.rs  stream.rs
rsocks/src/client/: client.rs  connector.rs  input.rs  listener.rs  mod.rs  server.rs
rsocks_derive/: Cargo.toml
rsocks_derive/src/: lib.rs
src/: header.rs  lib.rs  sendable.rs  sendable_impl.rs
