
[package]
name = "lazuli"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["lazuli_core", "lazuli_derive"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazuli_core = { path = "lazuli_core" }
lazuli_derive = { path = "lazuli_derive" }

