
[package]
name = "lazuli"
edition = "2021"
publish = true
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true


[workspace]
members = ["lazuli_core", "lazuli_derive"]

[workspace.package]
version = "0.1.1-rc.2"
authors = ["quackitsquinn"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/quackitsquinn/lazuli"
description = "A socket library for consistent, quick, and easy data transfer"
keywords = ["socket", "networking", "data transfer", "tcp", "lazuli"]
publish = true


[dependencies]
lazuli_core = { path = "lazuli_core", version = "0.1.1-rc.2" }
lazuli_derive = { path = "lazuli_derive", version = "0.1.1-rc.2" }

