[package]
name = "lazuli_core"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"

[dev-dependencies]
simplelog = "0.12.2"

